--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,7 @@
-# change application ID
-#application: training-conference-app
+#  Copyright 2013 The Go Authors. All rights reserved.
+#  Use of this source code is governed by a BSD-style
+#  license that can be found in the LICENSE file.
+
 application: go-conf
 version: 6
 runtime: go
